Adicionei arquivos .log à lista do git ignore

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <!-- Your (clean) code here! -->
+    <head>
+        <title>Obras Fácil</title>
+    </head>
+    <body></body>
 
 </html>
