Criei as Tags <meta>, <link>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,61 @@
 <html lang="pt-br">
     <head>
         <title>Obras Fácil</title>
+        <meta charset="utf-8"/> 
+        <meta name="author" content="Thiago Lemes Pereira"/>
+        <!-- Informações para mecanismo de pesquisa-->
+        <meta name="description" content="Landing page para a construtora Obras Fácil, especializade em obras populares"
+
+       <!-- Configurações de escala -->
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+
+        <!-- Style Sheets CSS -->
+        <link rel="stylesheets" href="stylesheets/base.css"
+
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="images/logo.png"
     </head>
-    <body></body>
+    <body>
+        <!-- Cabeçalho da Pagina-->
+        <header>
+            <div>
+                <img src="images/logo.png" alt="Obra Fácil" title="Obra Fácil"/>
+            </div>
+            <div>
+                Siga Conectado!
+                <a href="#" title="YouTube" class=" youtube_button"></a>
+                <a href="#" title="Twitter" class=" twitter_button"></a>
+                <a href="#" title="Facebook" class=" facebook_button"></a>
+            </div>
+        </header>
+
+        <!-- Conteúdo da Principal-->
+        <main>
+            <div class="content">
+                <h2> Teu Lar Reformado, energia reformada!</h2>
+                <p class="subtitle">Tornar sua casa uma demonstração da sua personalidade é nossa paixão.</p> 
+            </div class="video.area">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/huBwVg5piJQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+            <div>
+            </div class="form.area">
+            <h2>OBRAS RÁPIDAS E BARATAS!!</h2>
+            <p class="subtitle">Somos especialistas em Obras, Reformas e construção de Sonhos.</p>
+                    <form name="lead" action="#" method="post">
+                        <input type="text" name="name" placeholder="Digite seu nome completo"/>
+                        <input type="text" name="phone" placeholder="Digite seu número de telefone"/>
+                        <input type="text" name="email" placeholder="Digite seu email"/>
+                        <button id="Submit button">Fale Conosco</button>
+                    </form>
+            </div>
+        </div>
+        </main>
+
+        <!-- Rodapé da Pagina-->
+        <footer>
+            <span>Os Direitos Reservados Copyright &copy; 2023 Thiago Lemes</span>
+
+        </footer>
+    </body>
 
 </html>
